--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,6 +4,8 @@ $sec-color: rgb(23, 192, 45);
 $show-home-image: true;
 $home-image: url(back.jpg);
 
+@import 'menu';
+
 @mixin easeOut{
     transition: all 0.6s ease-out;
 }
