--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -33,6 +33,95 @@
             }
         }
     }
+}
 
 
+//menu overlay
+
+.menu{
+    position: fixed;
+    top: 0 ;
+    width: 100%;
+    opacity: .7;
+    visibility: hidden;
+    &.show{
+        visibility: visible;
+    }
+
+    &-brandning, &-nav
+    {
+        display: flex;
+        flex-flow: column wrap;
+        align-items: center;
+        justify-content: center;
+        float: left;
+        width: 50%;
+        height: 100vh;
+        overflow: hidden;
+    }
+    &-nav{
+        margin: 0;
+        padding: 0;
+        background: rgba($color: #000000, $alpha: 2);
+        transform: translate3d(0,-100%,0);
+        transition: .6s ease-in;
+    }
+
+    &-brandning{
+       background: rgba($color: #000000, $alpha: .8);
+       transition: .6s ease-in; 
+       transform: translate3d(0,100%,0);
+    }
+
+    .nav-link{
+        display: inline-block;
+        position: relative;
+        font-size: 20px;
+        margin: 1rem;
+        text-transform: uppercase;
+        color: white;
+        text-decoration: none;
+        transition: .6s ease-in;
+        &:hover{
+            color: green;
+        }
+    }
+    
+
+}
+
+.nav-item{
+
+    transform: translate3d(600px, 0 ,0);
+    &.current > a{
+        color: green;
+    }
+}
+.show{
+        
+    transition: .6s ease-in;
+        transform: translate3d(0,0,0);
+    }
+@for $x from 1 through 4{
+    .nav-item:nth-child(#{$x}) {
+        transition-delay: $x*0.1s;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.portrait{
 }
