--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,7 +5,6 @@ $show-home-image: true;
 $home-image: url(back.jpg);
 
 @import 'menu';
-
 @mixin easeOut{
     transition: all 0.6s ease-out;
 }
@@ -104,3 +103,39 @@ i{
     }
 }
 
+//media queries
+
+@media screen and (max-width:768px){
+    main{
+        align-items: center;
+        text-align: center;
+    }
+    i{
+        padding: 0;
+    }
+    .icons{
+        align-content: center;
+        align-items: center;
+        padding: -10vw;
+    }
+
+    ul.menu-nav, div.menu-brandning{
+        float: none;
+        width: 100%;
+        min-height: 0;
+        &.show{
+            transform: translate3d(0,0,0);
+        }
+    }
+
+    .menu-nav{
+        height: 75vh;
+        transform: translate3d(-100%,0,0);
+    }
+    .menu-brandning{
+        height: 25vh;
+        transform: translate3d(100%, 0,0);
+    }
+
+
+}
