--- a/scss/main.scss
+++ b/scss/main.scss
@@ -36,7 +36,7 @@ $home-image: url(back.jpg);
     box-sizing: border-box;
 }
 
-body{
+#bg-img{
     @include backgroud();
     margin: 0;
     line-height: 1.5;
@@ -45,6 +45,9 @@ body{
     
 }
 
+#about-body{
+    background: $overlay-color;
+}
 //heading
 h1, h2, h3, h4{
 
@@ -103,6 +106,39 @@ i{
     }
 }
 
+
+.about-info{
+    display: grid;
+    grid-gap: 30px;
+    grid-template-areas: 
+    'bioimage bio bio'
+    'job1 job2 job3';
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.bio-image{
+    grid-area: bioimage;
+    margin: auto;
+}
+.bio{
+    grid-area: bio;
+}
+.job-1{
+    grid-area: job1;
+}
+.job-2{
+    grid-area: job2;
+}
+.job-3{
+    grid-area: job3;
+}
+.job{
+    padding: 1rem;
+    background:darken($overlay-color, $amount: 5);
+    border-bottom: white 5px solid;
+}
+
+
 //media queries
 
 @media screen and (max-width:768px){
@@ -137,5 +173,13 @@ i{
         transform: translate3d(100%, 0,0);
     }
 
-
+    .about-info{
+        grid-template-areas: 
+        'bioimage'
+        'bio'
+        'job1'
+        'job2'
+        'job3';
+        grid-template-columns: 1fr;
+    }
 }
